Show Discoverable badge where missing
We needed to override the render_visibility_label helper to include
discoverable.

We discovered that, in one use case, the document is actually a
`SolrDocument` and not a `GenericFile`, so we had to add
`discoverable?` and friends to `SolrDocument` in order for this to work.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -21,3 +21,7 @@
 
 en:
   hello: "Hello world"
+  digital_archives:
+    visibility:
+      discoverable: "Discoverable"
+      discoverable_title_attr: "Discoverable"
